updated title tag

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     content="Mia Mckay">
     <meta name="description" 
     content="Short description">
-    <title>Mia Mckay UX Designer San Diego</title>
+    <title>About Mia Mckay </title>
 </head>
 <body>
     <header>
