--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
                     <img src="http://via.placeholder.com/32x3" alt="LinkedIn">
             </div>
             <a href="ANOTHER_SOCIAL_LINK">
-                <img src="https://via.placeholder.com/80">
+                <img src="https://via.placeholder.com/80" alt="social media link"
             </a>
         </div>
-        </div>
         <p>Copyright MIA-MCKAY 2020</p>
-        </div>
     </footer>
 </body>
 
