created wellwise project page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <div>
             <picture>
                 <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
-                <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo" >
+                <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
                 </picture>
                 <nav>
                     <ul>
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
+                        <li><a href="wellwise.html">WellWise Project</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
