change ; to : img width css

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Mia Mckay">
     <meta name="description" content="Short description">
+    <meta name="viewport" content="width=device-width, initial-scale=1>
     <title>About Mia Mckay</title>
 </head>
 <body>
