--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="author" content="Mia Mckay">
     <meta name="description" content="Short description">
-    <title>Mia Mckay UX Designer San Diego</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1>
+    <title> Mia Mckay UX Designer San Diego </title>
+    <link rel= "stylesheet" href="style.css" 
 </head>
 
 <body>
@@ -14,22 +16,26 @@
             <picture>
                 <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
                 <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
-                </picture>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Work</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="wellwise.html">My Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
+            </picture>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Work</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="wellwise.html">My Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
         <div>
             <div>
-                <h1>Hi, I'm Mia Mckay!</h1>
-                <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people</p>
+                <header id="hero">
+                    <!--Hero Section-->
+                    <h1>Hi, I'm Mia Mckay!</h1>
+                    <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people
+                    </p>
+                </header>
             </div>
             <div><!--open row that holds (2) columns for project-->
                 <div><!--open first column (used for image)-->
@@ -39,19 +45,24 @@
                     </picture>
                     <div><!-- end first column-->
                         <div><!-- open second column (used for text)-->
-                            <h3>WellWise</h3><!--heading for the proect-->
-                            <p><!--open paragraphh-->
-                                WellWise is a responsive web app designed to empower users to make educated health
-                                choices with credible, evidence-based natural health information and personalized tools
-                                to improve their well-being.
-                            </p><!--end paragraph-->
-                            <p><!--open paragraph-->
-                                The app helps users stay informed about the latest trends, securely store users’ health
-                                data with industry-standard security measures, and enables users to track their progress
-                                and curate a personalized health plan tailored to their unique needs and goals.
-                            </p><!--end paragraph-->
-                            <a href="">Read More</a><!--button or link label-->
+                            <section id="work">
+                                <h3>WellWise</h3><!--heading for the proect-->
+                                <p><!--open paragraphh-->
+                                    WellWise is a responsive web app designed to empower users to make educated health
+                                    choices with credible, evidence-based natural health information and personalized
+                                    tools
+                                    to improve their well-being.
+                                </p><!--end paragraph-->
+                                <p><!--open paragraph-->
+                                    The app helps users stay informed about the latest trends, securely store users’
+                                    health
+                                    data with industry-standard security measures, and enables users to track their
+                                    progress
+                                    and curate a personalized health plan tailored to their unique needs and goals.
+                                </p><!--end paragraph-->
+                                <a href="">Read More</a><!--button or link label-->
                         </div><!--end second column-->
+                        </section>
                     </div>
                     <div><!-- end row that holds (2) columns for project-->
                     </div>
@@ -60,6 +71,7 @@
     </main>
     <footer>
         <div>
+            <section id="contract">
             <h2>Get in Touch</h2>
             <p>
                 Do you like my work and want to discuss opportunities? Please get in touch. Call: <a
@@ -92,6 +104,7 @@
                             </g>
                         </g>
                     </svg>>
+                </section>
             </div>
             <p>Copyright MIA-MCKAY 2020</p>
     </footer>
