--- a/wellwise.html
+++ b/wellwise.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Mia Mckay">
     <meta name="description" content="Short description">
+    <meta name="viewport" content="width=device-width, initial-scale=1>
     <title>WellWise Project</title>
 </head>
 
@@ -61,12 +62,12 @@
                 identify common themes and insights.
                 User Personas: Created detailed personas to humanize your target users, providing a clear understanding
                 of their goals, frustrations, and behaviors. </p>
-                <picture>
-                    <source srcset="img/userpersonaar-1x.png" media="max-width: 767px">
-                    <img src="img/userpersonaar-2x.png" alt="Annie Rissman Persona">
-                    <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
-                    <img src="img/userpersonajd-2x.png" slt="J Davis Persona">
-                </picture>
+            <picture>
+                <source srcset="img/userpersonaar-1x.png" media="max-width: 767px">
+                <img src="img/userpersonaar-2x.png" alt="Annie Rissman Persona">
+                <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
+                <img src="img/userpersonajd-2x.png" slt="J Davis Persona">
+            </picture>
             <h3>Ideate</h3>
             <p>In the ideation phase, I explored potential solutions to address user needs:
                 Brainstorming and Sketching: I first generated a variety of ideas for the app.
@@ -75,33 +76,39 @@
                 User Flows: I designed user flows to illustrate how users would navigate through the app to achieve
                 specific tasks.
                 Site Maps: I created a site map to structure the app and ensure intuitive navigation.</p>
-                <picture>
-                    <source srcset="img/userflow1-1x.png" media="max-width: 767px">
-                    <img src="img/userflow1-2x.png" alt="User Flow 1">
-                    <source srcset="img/userflow2-1x.png" media="max-width: 767px">
-                    <img src="img/useflow2-2x.png" alt="User Flow 2">
-                </picture>
+            <picture>
+                <source srcset="img/userflow1-1x.png" media="max-width: 767px">
+                <img src="img/userflow1-2x.png" alt="User Flow 1">
+                <source srcset="img/userflow2-1x.png" media="max-width: 767px">
+                <img src="img/useflow2-2x.png" alt="User Flow 2">
+            </picture>
             <h3>Design</h3>
             <p> Next, I translated my ideas into hand drawn sketched and iterated on potential solutions:
                 Developed low and mid-fidelity wireframes for layout and basic functionality.
-                From there, I created high-fidelity prototypes with detailed design systems for usability and visual appeal. </p>
-                <picture>
-                    <source srcset="img/lowfid_uploadphysician'sreports-1x.png" media="max-width: 767px">
-                    <img src="img/lowfid_uploadphysician'sreports-2x.png" alt= "Low Fidelity Wireframe">
-                    <source srcset="img/midfid_setupprofile-1x.png" media="max-width: 767px">
-                    <img src="img/midfid_setupprofile-2x.png" alt="Mid Fidelity Wireframe">
-                    <source srcset="imghighfid_signup-1x.png" media="max-width: 767px">
-                    <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
-                </picture>
+                From there, I created high-fidelity prototypes with detailed design systems for usability and visual
+                appeal. </p>
+            <picture>
+                <source srcset="img/lowfid_uploadphysician'sreports-1x.png" media="max-width: 767px">
+                <img src="img/lowfid_uploadphysician'sreports-2x.png" alt="Low Fidelity Wireframe">
+                <source srcset="img/midfid_setupprofile-1x.png" media="max-width: 767px">
+                <img src="img/midfid_setupprofile-2x.png" alt="Mid Fidelity Wireframe">
+                <source srcset="imghighfid_signup-1x.png" media="max-width: 767px">
+                <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
+            </picture>
             <h3>Test</h3>
-            <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing ensured that my solution addressed user needs effectively.
-            I collected feedback through methods like usability tests and preference tests.
-            Analyzed user responses to pinpoint pain points or friction in the design, organizing the data with methods like the rainbow spreadsheet. </p>
+            <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing ensured
+                that my solution addressed user needs effectively.
+                I collected feedback through methods like usability tests and preference tests.
+                Analyzed user responses to pinpoint pain points or friction in the design, organizing the data with
+                methods like the rainbow spreadsheet. </p>
             <h3>Refine</h3>
-            <p>Based on testing feedback, I refined my design to enhance usability, functionality, and user satisfaction:
-                I iterated my wireframes or prototypes to fix issues and incorporate insights from usability testing. 
+            <p>Based on testing feedback, I refined my design to enhance usability, functionality, and user
+                satisfaction:
+                I iterated my wireframes or prototypes to fix issues and incorporate insights from usability testing.
                 I then polished my designs to ensure it aligned with user expectations and business goals.</p>
-                <a href="https://www.figma.com/design/KQbvBVvYrlNAbbQiTd8vWP/WellWise-Project?node-id=452-119&t=4gnipLtAyfpYkDII-0">Prototype Link</a>
+            <a
+                href="https://www.figma.com/design/KQbvBVvYrlNAbbQiTd8vWP/WellWise-Project?node-id=452-119&t=4gnipLtAyfpYkDII-0">Prototype
+                Link</a>
         </div>
     </main>
     <footer>
