--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Short description">
     <meta name="viewport" content="width=device-width, initial-scale=1>
     <title>About Mia Mckay</title>
+    <link rel= "stylesheet" href="style.css"
 </head>
 <body>
     <header>
