changed wellwise project description

--- a/wellwise.html
+++ b/wellwise.html
@@ -29,7 +29,7 @@
     <main>
         <div>
             <h1>What is WellWise?</h1>
-            <p> WellWise is an education app that enables users to discover credible content featuring real testimonials
+            <p> WellWise is an education app that enables users to discover credible health content featuring real testimonials
                 from individuals who have transformed their health, advice from experts, and articles to stay informed
                 on the latest trends and evidence-based insights. The app safely secures user’s health data to track
                 their progress with industry-standard security and curates personalized supplements and natural health
