--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 <body>
     <header>
         <div>
+            <div class="container">
+            </div>
             <picture>
                 <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
                 <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
             </picture>
+            <nav>
+                <ul class="navigation">
+                </ul>
+            </nav>
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -30,22 +36,30 @@
     <main>
         <div>
             <div>
-                <header id="hero">
+                <div id="hero">
+                    <div class="container"
                     <!--Hero Section-->
                     <h1>Hi, I'm Mia Mckay!</h1>
                     <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people
                     </p>
-                </header>
-            </div>
+                </div>
             <div><!--open row that holds (2) columns for project-->
                 <div><!--open first column (used for image)-->
+                <div class="container">
+                    <img src="img/logo.png" alt="Logo" />
+                    <nav>
+                        <ul class="navigation">
+                        </ul>
+                    </nav>
+                    </img>
                     <picture>
                         <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
                         <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
                     </picture>
                     <div><!-- end first column-->
                         <div><!-- open second column (used for text)-->
-                            <section id="work">
+                            <div id="work">
+                                <div class="container">
                                 <h3>WellWise</h3><!--heading for the proect-->
                                 <p><!--open paragraphh-->
                                     WellWise is a responsive web app designed to empower users to make educated health
@@ -61,6 +75,7 @@
                                     and curate a personalized health plan tailored to their unique needs and goals.
                                 </p><!--end paragraph-->
                                 <a href="">Read More</a><!--button or link label-->
+                                </div>
                         </div><!--end second column-->
                         </section>
                     </div>
@@ -71,7 +86,7 @@
     </main>
     <footer>
         <div>
-            <section id="contract">
+            <div class="container">
             <h2>Get in Touch</h2>
             <p>
                 Do you like my work and want to discuss opportunities? Please get in touch. Call: <a
