changed code structure
closed tags to prevent spaces between columns

--- a/about.html
+++ b/about.html
@@ -12,10 +12,12 @@
 <body>
     <header>
         <div>
-            <picture>
-                <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
-                <img src="img/mia_mckay_logo-2px.png" alt= "Mia Mckay Logo" >
-            </picture>
+            <div class="container">
+                <div class="logo">
+                    <picture>
+                        <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
+                        <img src="img/mia_mckay_logo-2px.png" alt= "Mia Mckay Logo" >
+                    </picture>
                 <nav>
                     <ul>
                         <li><a href=" index.html">Work</a></li>
@@ -47,9 +49,10 @@
                 <a href="file:///C:/Users/miasm/Downloads/Mckay.Mia.Resume%20.pdf">My Resume</a>
             </div>
             <div>
-                <h1>Skills & Tools</h1>
-                <h2> Skills</h2>
-                <p>Surveys/ Interviews
+                <div class="row">
+                    <h1>Skills & Tools</h1>
+                    <h2> Skills</h2>
+                    <p>Surveys/ Interviews
                     Affinity Mapping
                     Wireframing
                     Prototyping
@@ -57,14 +60,15 @@
                     Persona Development
                     Website Accessibility
                     Color & Typography
-                </p>
-                <h2> Tools</h2>
-                <p> Figma
+                    </p>
+                    <h2> Tools</h2>
+                    <p> Figma
                     Adobe XD
                     Optimal Workshop
                     Lyssna
                     Behance
-                </p>
+                    </p>
+                </div>
             </div>
     </main>
     <footer>
