--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta charset="utf-8">
     <meta name="author" content="Mia Mckay">
     <meta name="description" content="Short description">
-    <meta name="viewport" content="width=device-width, initial-scale=1>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mia Mckay UX Designer San Diego </title>
-    <link rel= "stylesheet" href="style.css" 
+    <link rel= "stylesheet" href= "style.css"> 
 </head>
 
 <body>
     <header>
         <div>
             <div class="container">
+                <picture>
+                    <div class="logo">
+                    <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
+                    <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
+                </picture>
+                    <nav>
+                        <ul class="navigation">
+                        </ul>
+                    </nav>
             </div>
-            <picture>
-                <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
-                <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
-            </picture>
-            <nav>
-                <ul class="navigation">
-                </ul>
-            </nav>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -33,95 +35,68 @@
             </nav>
         </div>
     </header>
+
     <main>
         <div>
             <div>
                 <div id="hero">
-                    <div class="container"
-                    <!--Hero Section-->
-                    <h1>Hi, I'm Mia Mckay!</h1>
-                    <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people
-                    </p>
-                </div>
-            <div><!--open row that holds (2) columns for project-->
-                <div><!--open first column (used for image)-->
-                <div class="container">
-                    <img src="img/logo.png" alt="Logo" />
-                    <nav>
-                        <ul class="navigation">
-                        </ul>
-                    </nav>
-                    </img>
-                    <picture>
-                        <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
-                        <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
-                    </picture>
-                    <div><!-- end first column-->
+                    <div class="container">
+                        <h1>Hi, I'm Mia Mckay!</h1>
+                            <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people</p>
+                    </div>
+
+                    <div><!--open row that holds (2) columns for project-->
+                        <div><!--open first column (used for image)-->
+                            <div class="container">
+                                <picture>
+                                    <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
+                                    <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
+                                </picture>
+                            <div><!-- end first column-->
                         <div><!-- open second column (used for text)-->
-                            <div id="work">
                                 <div class="container">
-                                <h3>WellWise</h3><!--heading for the proect-->
-                                <p><!--open paragraphh-->
-                                    WellWise is a responsive web app designed to empower users to make educated health
+                                <div id="work">
+                                    <h3>My Work</h3><!--heading for the proect-->
+                                    <p>WellWise is a responsive web app designed to empower users to make educated health
                                     choices with credible, evidence-based natural health information and personalized
-                                    tools
-                                    to improve their well-being.
-                                </p><!--end paragraph-->
-                                <p><!--open paragraph-->
-                                    The app helps users stay informed about the latest trends, securely store users’
-                                    health
-                                    data with industry-standard security measures, and enables users to track their
-                                    progress
-                                    and curate a personalized health plan tailored to their unique needs and goals.
-                                </p><!--end paragraph-->
-                                <a href="">Read More</a><!--button or link label-->
+                                    tools to improve their well-being. </p>
+                                <p>The app helps users stay informed about the latest trends, securely store users’
+                                    health data with industry-standard security measures, and enables users to track their progress
+                                    and curate a personalized health plan tailored to their unique needs and goals.</p>
+                                <a href="#">Read More</a>
                                 </div>
-                        </div><!--end second column-->
-                        </section>
+                            </div><!--end second column-->
+                        </div>
                     </div>
-                    <div><!-- end row that holds (2) columns for project-->
-                    </div>
-                </div>
+                <div>
             </div>
+        </div>
     </main>
+
     <footer>
         <div>
             <div class="container">
-            <h2>Get in Touch</h2>
-            <p>
-                Do you like my work and want to discuss opportunities? Please get in touch. Call: <a
-                    href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?
-            </p>
+                <h2>Get in Touch</h2>
+                <p> Do you like my work and want to discuss opportunities? Please get in touch. Call: <a href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email? </p>
             <div>
                 <a href="mailto:miasmckay0@gmail.com">Email me</a>
             </div>
-            <div>
-                <!--Social Media Layout Placeholders-->
+
                 <a href="LINKEDIN_URL" target="blank">
-                    <svg height="100%"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-                        version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/"
-                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="g5891">
-                            <path
-                                d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z"
-                                id="background" style="fill:#2867b2;" />
+                            <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
                             <g id="shapes">
-                                <rect height="257.962" id="rect11" style="fill:#fff;" width="85.76" x="61.053"
-                                    y="178.667" />
-                                <path
-                                    d="M104.512,54.28c-29.341,0 -48.512,19.29 -48.512,44.573c0,24.752 18.588,44.574 47.377,44.574l0.554,0c29.903,0 48.516,-19.822 48.516,-44.574c-0.555,-25.283 -18.611,-44.573 -47.935,-44.573Z"
-                                    id="path13-0" style="fill:#fff;fill-rule:nonzero;" />
-                                <path
-                                    d="M357.278,172.601c-45.49,0 -65.866,25.017 -77.276,42.589l0,-36.523l-85.738,0c1.137,24.197 0,257.961 0,257.961l85.737,0l0,-144.064c0,-7.711 0.554,-15.42 2.827,-20.931c6.188,-15.4 20.305,-31.352 43.993,-31.352c31.012,0 43.436,23.664 43.436,58.327l0,138.02l85.741,0l0,-147.93c0,-79.237 -42.305,-116.097 -98.72,-116.097Z"
-                                    id="path15" style="fill:#fff;fill-rule:nonzero;" />
+                                <rect height="257.962" id="rect11" style="fill:#fff;" width="85.76" x="61.053" y="178.667" />
+                                <path d="M104.512,54.28c-29.341,0 -48.512,19.29 -48.512,44.573c0,24.752 18.588,44.574 47.377,44.574l0.554,0c29.903,0 48.516,-19.822 48.516,-44.574c-0.555,-25.283 -18.611,-44.573 -47.935,-44.573Z" id="path13-0" style="fill:#fff;fill-rule:nonzero;" />
+                                <path d="M357.278,172.601c-45.49,0 -65.866,25.017 -77.276,42.589l0,-36.523l-85.738,0c1.137,24.197 0,257.961 0,257.961l85.737,0l0,-144.064c0,-7.711 0.554,-15.42 2.827,-20.931c6.188,-15.4 20.305,-31.352 43.993,-31.352c31.012,0 43.436,23.664 43.436,58.327l0,138.02l85.741,0l0,-147.93c0,-79.237 -42.305,-116.097 -98.72,-116.097Z" id="path15" style="fill:#fff;fill-rule:nonzero;" />
                             </g>
                         </g>
-                    </svg>>
-                </section>
+                    </svg>
+                </a>
             </div>
             <p>Copyright MIA-MCKAY 2020</p>
+        </div>
     </footer>
 </body>
 
