changed location of folder to access logo img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <picture>
                     <div class="logo">
                     <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
-                    <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
+                    <img src="assets/img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
                 </picture>
                     <nav>
                         <ul class="navigation">
