--- a/wellwise.html
+++ b/wellwise.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="author" content="Mia Mckay">
     <meta name="description" content="Short description">
-    <meta name="viewport" content="width=device-width, initial-scale=1>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WellWise Project</title>
-    <link rel= "stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -29,7 +29,8 @@
     <main>
         <div>
             <h1>What is WellWise?</h1>
-            <p> WellWise is an education app that enables users to discover credible health content featuring real testimonials
+            <p> WellWise is an education app that enables users to discover credible health content featuring real
+                testimonials
                 from individuals who have transformed their health, advice from experts, and articles to stay informed
                 on the latest trends and evidence-based insights. The app safely secures user’s health data to track
                 their progress with industry-standard security and curates personalized supplements and natural health
@@ -66,6 +67,8 @@
             <picture>
                 <source srcset="img/userpersonaar-1x.png" media="max-width: 767px">
                 <img src="img/userpersonaar-2x.png" alt="Annie Rissman Persona">
+            </picture>
+            <picture>
                 <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
                 <img src="img/userpersonajd-2x.png" slt="J Davis Persona">
             </picture>
@@ -124,7 +127,7 @@
             </div>
             <div>
                 <!--Social Media Layout Placeholders-->
-                <a href="LINKEDIN_URL" target="blank">
+                <a href="https://www.linkedin.com/in/miamckay11/" target="blank">
                     <svg height="100%"
                         style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
                         version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"
@@ -145,9 +148,10 @@
                                     id="path15" style="fill:#fff;fill-rule:nonzero;" />
                             </g>
                         </g>
-                    </svg>>
+                    </svg>
             </div>
             <p>Copyright MIA-MCKAY 2020</p>
+        </div>
     </footer>
 </body>
 
