changed relative path for resume link

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     to a more sustainable and connected world.</p>
             </div>
             <div>
-                <a href="file:///C:/Users/miasm/Downloads/Mckay.Mia.Resume%20.pdf">My Resume</a>
+                <a href="files/mia.mckay.resume.pdf">My Resume</a>
             </div>
             <div class="row">
                 <h1>Skills & Tools</h1>
