--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Short description">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mia Mckay UX Designer San Diego </title>
-    <link rel= "stylesheet" href= "style.css"> 
+    <link rel= "stylesheet" href= "css/style.css"> 
 </head>
 
 <body>
@@ -49,8 +49,8 @@
                         <div><!--open first column (used for image)-->
                             <div class="container">
                                 <picture>
-                                    <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
-                                    <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
+                                    <source srcset="img/myphoto-1x.png" media="(max-width:767px)">
+                                    <img src="img/myphoto-2x.png" alt="My Photo">
                                 </picture>
                             <div><!-- end first column-->
                         <div><!-- open second column (used for text)-->
@@ -64,6 +64,10 @@
                                     health data with industry-standard security measures, and enables users to track their progress
                                     and curate a personalized health plan tailored to their unique needs and goals.</p>
                                 <a href="#">Read More</a>
+                                <picture>
+                                    <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
+                                    <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
+                                </picture>
                                 </div>
                             </div><!--end second column-->
                         </div>
