--- a/wellwise.html
+++ b/wellwise.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Short description">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WellWise Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel= "stylesheet" href= "css/style.css">
 </head>
 
 <body>
