fixed read more link to direct to wellwise project

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div id="hero">
                     <div class="container">
                         <h1>Hi, I'm Mia Mckay!</h1>
-                            <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people</p>
+                            <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people.</p>
                     </div>
 
                     <div><!--open row that holds (2) columns for project-->
@@ -63,7 +63,7 @@
                                 <p>The app helps users stay informed about the latest trends, securely store users’
                                     health data with industry-standard security measures, and enables users to track their progress
                                     and curate a personalized health plan tailored to their unique needs and goals.</p>
-                                <a href="#">Read More</a>
+                                <a href="wellwise.html">Read More</a>
                                 <picture>
                                     <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
                                     <img src="img/wellwiselogo2-2x.png" alt="WellWise Logo">
