--- a/wellwise.html
+++ b/wellwise.html
@@ -94,11 +94,18 @@
             <picture>
                 <source srcset="img/lowfid_uploadphysician'sreports-1x.png" media="max-width: 767px">
                 <img src="img/lowfid_uploadphysician'sreports-2x.png" alt="Low Fidelity Wireframe">
+            </picture>
+
+            <picture>
                 <source srcset="img/midfid_setupprofile-1x.png" media="max-width: 767px">
                 <img src="img/midfid_setupprofile-2x.png" alt="Mid Fidelity Wireframe">
-                <source srcset="imghighfid_signup-1x.png" media="max-width: 767px">
+            </picture>
+
+            <picture>
+                <source srcset="img/highfid_signup-1x.png" media="max-width: 767px">
                 <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
             </picture>
+
             <h3>Test</h3>
             <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing ensured
                 that my solution addressed user needs effectively.
