changed path to folder to link css file

--- a/wellwise.html
+++ b/wellwise.html
@@ -84,7 +84,7 @@
                 <source srcset="img/userflow1-1x.png" media="max-width: 767px">
                 <img src="img/userflow1-2x.png" alt="User Flow 1">
                 <source srcset="img/userflow2-1x.png" media="max-width: 767px">
-                <img src="img/useflow2-2x.png" alt="User Flow 2">
+                <img src="img/userflow2-2x.png" alt="User Flow 2">
             </picture>
             <h3>Design</h3>
             <p> Next, I translated my ideas into hand drawn sketched and iterated on potential solutions:
