--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="wellwise.html">My Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
