--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <picture>
                     <div class="logo">
                     <source srcset="img/mia_mckay_logo-1px.png" media="max-width: 767px">
-                    <img src="assets/img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
+                    <img src="img/mia_mckay_logo-2px.png" alt="Mia Mckay Logo">
                 </picture>
                     <nav>
                         <ul class="navigation">
@@ -30,7 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="wellwise.html">My Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
