ungrouped picture set

--- a/wellwise.html
+++ b/wellwise.html
@@ -83,6 +83,8 @@
             <picture>
                 <source srcset="img/userflow1-1x.png" media="max-width: 767px">
                 <img src="img/userflow1-2x.png" alt="User Flow 1">
+            </picture>
+            <picture>
                 <source srcset="img/userflow2-1x.png" media="max-width: 767px">
                 <img src="img/userflow2-2x.png" alt="User Flow 2">
             </picture>
