--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Work</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="wellwise.html">My Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
