--- a/wellwise.html
+++ b/wellwise.html
@@ -19,7 +19,7 @@
             </picture>
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
